--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
 //    viewBinding.enabled = true
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         applicationId "com.modern.tec.films"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -78,5 +78,6 @@ dependencies {
     //Rotate Layout
     implementation 'rongi.rotate-layout:rotate-layout:3.0.0'
 
-
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
