--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FilmsApp">
+        android:theme="@style/shahid_theme">
         <activity android:name=".presentation.ui.CategoryActivity" />
         <activity
             android:name=".presentation.ui.PopularActivity"
@@ -21,7 +21,8 @@
             android:exported="false" />
         <activity
             android:name=".presentation.ui.SplashScreenActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
